test/sema/typeck/module/use-errors2.out
error: module `` does not contain identifier `foo`.
--> use-errors2.dora:1:11
 | use self::foo::bar;
             ~~~
 | 
1 error found.
